style: minicart desktop and mobile

--- a/store/blocks/desktop/components/footer/footer__section--one.jsonc
+++ b/store/blocks/desktop/components/footer/footer__section--one.jsonc
@@ -1,5 +1,6 @@
 {
   "rich-text#footer__section--one": {
+    "title": "footer news letter",
     "props": {
       "text": "ÚNETE AL CLUB Y AHORRA UN 15%",
       "textAlignment": "CENTER",
