--- a/store/blocks/desktop/components/header/header-row__top-slider--content.jsonc
+++ b/store/blocks/desktop/components/header/header-row__top-slider--content.jsonc
@@ -1,6 +1,6 @@
 {
   "rich-text#header__slider--one": {
-    "title": "slider section one",
+    "title": "slider section top",
     "props": {
       "blockClass": "text-message",
       "text": "✨COMPRA MÁS, AHORRA MÁS✨"
