--- a/store/blocks/desktop/components/header/header__menu--container.jsonc
+++ b/store/blocks/desktop/components/header/header__menu--container.jsonc
@@ -131,7 +131,7 @@
     ]
   },
   "menu-item#department__week": {
-    "title": "Department adidas",
+    "title": "Department week",
     "props": {
       "id": "menu-item-shop",
       "type": "custom",
