--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,9 @@
     "vtex.search": "1.x",
     "vtex.store-icons": "0.x",
     "vtex.modal-layout": "0.x",
-    "vtex.product-list": "0.x"
+    "vtex.product-list": "0.x",
+    "vtex.checkout-summary": "0.x",
+    "vtex.store-video": "1.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
