--- a/store/blocks/desktop/components/home/home.jsonc
+++ b/store/blocks/desktop/components/home/home.jsonc
@@ -1,136 +1,63 @@
 {
-  "responsive-layout.desktop#home__section-1": {
-    "title": "Home Section 1 Desktop",
+  "flex-layout.row#home__section--history": {
+    "title": "home section history container",
     "children": [
-      "info-card#one",
-      "info-card#two",
-      "rich-text#desktop__text--shields",
-      "flex-layout.row#desktop__shields",
-      // "search-result-layout.customQuery#home__search",
-      "flex-layout.row#home__shelf"
-    ]
-  },
-
-  //
-
-  "flex-layout.row#home__shelf": {
-    "children": [
-      "list-context.product-list"
-    ]
-  },
-
-  "list-context.product-list": {
-        "blocks": ["product-summary.shelf"],
-        "children": [
-          "slider-layout#text-test"
-        ]
-    },
-
-    "slider-layout#text-test": {
-      "props": {
-        "itemsPerPage": {
-          "desktop": 4,
-          "tablet": 1,
-          "phone": 1
-        },
-        "infinite": true,
-        "showNavigationArrows": "desktopOnly",
-        "blockClass": "carousel_home"
-      }
-    },
-
-    "product-summary.shelf": {
-          "children": [
-            "product-summary-image#product__image",
-            "product-summary-name#product__name",
-            // "product-rating-inline#product__rating",
-            "product-summary-space#product__space",
-            "product-summary-price#product__price",
-            "add-to-cart-button#product__button"
-          ]
-    },
-
-    "product-summary-image#product__image": {
-      "props": {
-        "blockClass": "product__image"
-      }
-    },
-    "product-summary-name#product__name": {
-      "props": {
-        "blockClass":"product__name"
-      }
-    },
-    // "product-rating-inline#product__rating": {
-    //   "props": {
-    //     "blockClass":"product__rating"
-    //   }
-    // },
-    "product-summary-space#product__space": {
-      "props": {
-        "blockClass":"product__space"
-      }
-    },
-    "product-summary-price#product__price":{
-      "props": {
-        "blockClass":"product__price"
-      }
-    },
-    "add-to-cart-button#product__button": {
-      "props": {
-        "blockClass":"product__button"
-      }
+      "flex-layout.col#home__section--historyone",
+      "flex-layout.col#home__section--historytwo"
+    ],
+    "props": {
+      "blockClass": "home__section--history"
     }
+  },
+  "flex-layout.col#home__section--historyone": {
+    "title": "home section history one container",
+    "children": [
+      "rich-text#history__title--one",
+      "rich-text#history__paragraph--one"
+    ],
+    "props": {
+      "blockClass": "home__section--historyone"
+    }
+  },
+  "flex-layout.col#home__section--historytwo": {
+    "title": "home section history one container",
+    "children": [
+      "rich-text#history__title--two",
+      "rich-text#history__paragraph--two"
+    ],
+    "props": {
+      "blockClass": "home__section--historytwo"
+    }
+  },
 
+  "rich-text#history__title--one": {
+    "title": "history title one",
+    "props": {
+      "text": "HISTORIA, MODA Y ROPA DEPORTIVA ADIDAS DESDE 1924",
+      "blockClass": "history__title"
+    }
+  },
+  "rich-text#history__paragraph--one": {
+    "title": "history paragraph one",
+    "props": {
+      "text": "El deporte nos mantiene en forma. Te mantiene atento. Nos une. A través del deporte podemos cambiar vidas. Ya sea a través de historias de atletas inspiradores. Animándote a ponerte en marcha. Ofreciéndote artículos deportivos con las últimas tecnologías para mejorar tu rendimiento. Supera tu mejor marca personal. adidas es el hogar del corredor, del jugador de básquet, del joven futbolista y del entusiasta del fitness. Del aventurero que escapa de la ciudad los fines de semana. De la instructora de yoga que enseña nuevas posturas. Las 3 Rayas se ven en el mundo de la música. En el escenario, en los festivales. Nuestra ropa deportiva para mujer y para hombre te mantiene concentrado antes de que suene el silbato. Durante la carrera. Y en la línea de meta. Estamos aquí para apoyar a los creadores. Mejorar su juego. Sus vidas. Y cambiar el mundo. adidas es mucho más que ropa deportiva y ropa de entrenamiento. Nos asociamos con los mejores de la industria para co-crear. De esta manera, ofrecemos a nuestras seguidores la ropa deportiva y los estilos que mejor se adaptan a sus necesidades deportivas, sin dejar de lado la sostenibilidad. Apoyamos a los creadores. Les ayudamos a mejorar su rendimiento. Creamos el cambio. Y pensamos en el impacto que tenemos en nuestro mundo.",
+      "blockClass": "history__paragraph"
+    }
+  },
 
-  //
+  "rich-text#history__title--two": {
+    "title": "history title two",
+    "props": {
+      "text": "TU TIENDA DEPORTIVA PARA CUALQUIER DEPORTE",
+      "blockClass": "history__title"
+    }
+  },
+  "rich-text#history__paragraph--two": {
+    "title": "history paragraph two",
+    "props": {
+      "text": "adidas diseña ropa deportiva para atletas de todo tipo. Creadores que disfrutan de cambiar las reglas del juego. Desafiar las convenciones. Romper las normas y definir nuevas. Y volverlas a romper. Confeccionamos la ropa que visten equipos y jugadores individuales en preparación para el partido. Para que no pierdan la concentración. Diseñamos indumentaria deportiva para que llegues a la meta. Para que ganes el partido. Somos la tienda especializada en ropa deportiva para mujeres, con tops deportivos y licras diseñados con un objetivo en mente. Para deportes de impacto bajo, medio o alto. Diseñamos, innovamos e iteramos. Ponemos a prueba nuevas tecnologías. En el campo, en la cancha, en la pista, en la piscina. La ropa deportiva retro inspira nuevos elementos esenciales de la ropa urbana. Como los NMD y las sudaderas Firebird. Los modelos deportivos clásicos vuelven a la vida. Como los Stan Smith y los Superstar. Ahora en todas las calles y en los escenarios más destacados. A través de nuestras colecciones eliminamos las barreras entre la moda de alta costura y el mejor rendimiento. Por ejemplo, nuestra colección de ropa deportiva adidas by Stella McCartney está pensada para ofrecer un look sofisticado dentro y fuera del gimnasio. O algunas de nuestras prendas de estilo urbano adidas Originals también pueden usarse como ropa deportiva. Nuestras vidas están cambiando constantemente. Cada vez son más versátiles. Y en adidas diseñamos pensando en eso.",
+      "blockClass": "history__paragraph"
+    }
+  }
 
-  // "search-result-layout.customQuery#home__search": {
-  //   "props": {
-  //     "querySchema": {
-  //       "skusFilter": "ALL",
-  //       "simulationBehavior": "skip"
-  //     }
-  //   },
-  //   "blocks": [
-  //     "search-result-layout.desktop#home__search--desktop",
-  //     "search-result-layout.mobile#home__search--mobile",
-  //     "search-not-found-layout"
-  //   ]
-  // },
-  // "search-result-layout.desktop#home__search--desktop": {
-  //   "children": [
-  //     "flex-layout.row#search__result"
-  //   ]
-  // },
-  // "search-result-layout.mobile#home__search--mobile": {
-  //   "children": [
-  //     "flex-layout.row#search__result"
-  //   ]
-  // },
-  // "flex-layout.row#search__result": {
-  //   "children": [
-  //     "flex-layout.col#home__results--rearch"
-  //   ]
-  // },
-  // "flex-layout.col#home__results--rearch": {
-  //   "children": [
-  //     "search-content#home__results--search"
-  //   ]
-  // },
-  // "search-content#home__results--search": {
-  //   "blocks": ["gallery", "not-found"]
-  // },
-  // "gallery": {
-  //   "blocks": ["product-summary.shelf"]
-  // },
-  // "product-summary.shelf": {
-  //   "children": [
-  //     "product-summary-name",
-  //     "product-summary-description",
-  //     "product-summary-image",
-  //     "product-summary-price",
-  //     "product-summary-sku-selector",
-  //     "add-to-cart-button"
-  //   ]
-  // }
 }
