--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -25,8 +25,7 @@
       "rich-text#home__slider--title-one",
       "flex-layout.row#home__shelf",
       "flex-layout.col#home__cards--tendencies",
-      "rich-text#desktop__text--shields",
-      "flex-layout.row#desktop__shields",
+      "flex-layout.col#desktop__shields--container",
       // "search-result-layout.customQuery#home__search",
       "rich-text#home__slider--title-two",
       "flex-layout.row#home__shelf",
