--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -3,7 +3,8 @@
     "title" : "home global container",
     "blocks": [
       "responsive-layout.desktop",
-      "responsive-layout.mobile"
+      "responsive-layout.tablet",
+      "responsive-layout.phone"
     ]
   }
 }
