--- a/store/blocks/desktop/components/footer/footer.jsonc
+++ b/store/blocks/desktop/components/footer/footer.jsonc
@@ -1,10 +1,10 @@
 {
   "footer": {
-    "blocks": ["footer-layout.desktop"]
+    "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
   },
   "footer-layout.desktop": {
     "title": "footer desktop",
-    "children": ["rich-text#footer__section--one", "flex-layout.row#footer__section--two", "flex-layout.row#desktop__footer--main"]
+    "children": ["flex-layout.row#desktop__footer--newsletter", "flex-layout.row#footer__section--two", "flex-layout.row#desktop__footer--main"]
   },
   "flex-layout.row#footer__section--two": {
     "title": "footer desktop middle",
