--- a/store/blocks/desktop/components/home/home__section--shields.jsonc
+++ b/store/blocks/desktop/components/home/home__section--shields.jsonc
@@ -1,4 +1,26 @@
 {
+
+  "flex-layout.col#desktop__shields--container": {
+    "title": "desktop shields container",
+    "children": [
+      "flex-layout.row#desktop__shields--title",
+      "flex-layout.row#desktop__shields--images"
+    ]
+  },
+
+  "flex-layout.row#desktop__shields--title":{
+    "title": "desktop shields title",
+    "children": [
+      "rich-text#desktop__text--shields"
+    ]
+  },
+  "flex-layout.row#desktop__shields--images":{
+    "title": "desktop shields images",
+    "children": [
+      "flex-layout.row#desktop__shields"
+    ]
+  },
+
   "rich-text#desktop__text--shields": {
     "title": "rich text section one shields",
     "props": {
@@ -18,8 +40,8 @@
       "flex-layout.col#shield__arsenal--one",
       "flex-layout.col#shield__madrid--one",
       "flex-layout.col#shield__manchester--one",
-      "flex-layout.col#shield__juventus--one"
-      // "flex-layout.col#shield__bayern--one"
+      "flex-layout.col#shield__juventus--one",
+      "flex-layout.col#shield__bayern--one"
     ],
     "props": {
       "colSizing": "auto",
@@ -76,18 +98,18 @@
       "image#shield__juventus--img"
     ]
   },
-  // "flex-layout.col#shield__bayern--one":{
-  //   "title": "shield item",
-  //   "children": [
-  //     "image#shield__bayern--img"
-  //   ]
-  // },
+  "flex-layout.col#shield__bayern--one":{
+    "title": "shield item",
+    "children": [
+      "image#shield__bayern--img"
+    ]
+  },
 
   "image#shield__colombia--img": {
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/colombia__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -96,7 +118,7 @@
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/millonarios__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -105,7 +127,7 @@
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/medellin__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -114,7 +136,7 @@
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/junior__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -123,7 +145,7 @@
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/arsenal__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -132,7 +154,7 @@
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/madrid__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -141,7 +163,7 @@
     "title": "shield item image",
     "props" : {
       "src" : "assets/img/home/manchester__shield.jpg",
-      "blockClass" : "home__favorite--logo",
+      // "blockClass" : "home__favorite--logo",
       "maxWidth" : 51,
       "maxHeight": 51
     }
@@ -154,14 +176,14 @@
       "maxWidth" : 51,
       "maxHeight": 51
     }
+  },
+  "image#shield__bayern--img": {
+    "title": "shield item image",
+    "props" : {
+      "src" : "assets/img/home/bayern__shield.jpg",
+      "blockClass" : "home__favorite--logo",
+      "maxWidth" : 51,
+      "maxHeight": 51
+    }
   }
-  // "image#shield__bayern--img": {
-  //   "title": "shield item image",
-  //   "props" : {
-  //     "src" : "assets/img/home/bayern__shield.jpg",
-  //     "blockClass" : "home__favorite--logo",
-  //     "maxWidth" : 51,
-  //     "maxHeight": 51
-  //   }
-  // }
 }
