--- a/store/blocks/phone/screen/home.jsonc
+++ b/store/blocks/phone/screen/home.jsonc
@@ -1,6 +1,42 @@
 {
-  "responsive-layout.phone#home__section-1": {
-    "title": "Section 1 Phone Home",
-    "children": ["flex-layout.row#phone__home__section-1"]
+  "responsive-layout.phone": {
+    "title": "Home Section one phone",
+    "children": [
+      "flex-layout.row#home__container--phone"
+    ],
+    "props": {
+      "blockClass": "container__desktop"
+    }
+  },
+
+  "flex-layout.row#home__container--phone": {
+    "children": [
+      "flex-layout.col#home__phone"
+    ],
+    "props": {
+      "blockClass": "container__desktop--row"
+    }
+  },
+
+  "flex-layout.col#home__phone": {
+    "children": [
+      "info-card#phone__one--bunny",
+      "info-card#phone__two--classics",
+      "rich-text#home__slider--title-one",
+      "flex-layout.row#home__shelf",
+      "flex-layout.row#mobile__menu--home",
+      "flex-layout.col#home__cards--tendencies",
+      "flex-layout.col#phone__shields--container",
+      // "search-result-layout.customQuery#home__search",
+      "rich-text#home__slider--title-two",
+      "flex-layout.row#home__shelf",
+      "flex-layout.col#home__grid--popular",
+      "rich-text#home__slider--title-two",
+      "flex-layout.row#home__shelf",
+      "flex-layout.row#home__section--history"
+    ],
+    "props": {
+      "blockClass": "container__desktop--col"
+    }
   }
 }
