--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -26,12 +26,12 @@
       "flex-layout.col#spacer__desktop-one",
       "flex-layout.row#header__bottom--menu",
       // "flex-layout.col#spacer__desktop-two",
-      "search-bar#mobile__header--menu",
+      "search-bar#desktop__header--menu",
       "flex-layout.row#header__bottom--user"
     ]
   },
 
-  "search-bar#mobile__header--menu": {
+  "search-bar#desktop__header--menu": {
     "title": "Search bar icon",
     "blocks": [
       "autocomplete-result-list.v2"
@@ -49,213 +49,21 @@
   "autocomplete-result-list.v2": {
     "blocks": ["product-summary"]
   }
-  // "search-bar": {
-  //   "blocks": ["autocomplete-result-list.v2"],
-  //   "props": {
-  //     "openAutocompleteOnFocus": true
-  //   }
+
+  // "list-context.product-list": {
+  //   "blocks": ["product-summary.shelf#hola"]
   // },
 
+  // "product-summary.shelf#hola": {
+  //   "children": [
+  //     "product-summary-name",
+  //     "product-summary-description",
+  //     "product-summary-image",
+  //     "product-summary-price",
+  //     "product-summary-sku-selector",
+  //     "product-summary-buy-button"
+  //   ]
+  // }
 
 
-
-//   "header-layout.mobile": {
-//     "title": "header mobile",
-//     "children": ["slider-layout#header__slider-top", "flex-layout.row#mobile", "rich-text#section-one"]
-//   },
-//   "flex-layout.row#mobile": {
-//     "title": "header container mobile",
-//     "children": [
-//       "flex-layout.row#header__mobile--section-one",
-//       "header-spacer",
-//       // "flex-layout.col#spacer__desktop-one",
-//       "logo#mobile",
-//       // "flex-layout.col#spacer__desktop-two",
-//       "flex-layout.row#header___mobile--bottom--user"
-//     ],
-//     "props": {
-//       "blockClass": ["main-header-mobile"],
-//       "preventHorizontalStretch": true,
-//       "preserveLayoutOnMobile": true,
-//       "fullWidth": true
-//     }
-//   },
-//   "flex-layout.row#header___mobile--bottom--user" : {
-//     "title" : "header bottom row user section",
-//     "children" : [
-//       "modal-trigger#mobile__profile--tigger",
-//       "flex-layout.col#icon__mobile--search",
-//       "flex-layout.col#icon__mobile--cart"
-//     ],
-//     "props" : {
-//       "blockClass" : "header__bottom--user",
-//       "colSizing" : "auto",
-//       "colGap" : 7
-//     }
-//   },
-//   "flex-layout.col#icon__mobile--cart": {
-//     "title": "header mobile minicart",
-//     "children": [
-//       "minicart.v2#desktop__minicart--icon"
-//     ],
-//     "props": {
-//       "blockClass": "icon__mobile--cart"
-//     }
-//   },
-//   "flex-layout.col#icon__mobile--search": {
-//     "title": "header mobile search",
-//     "children": [
-//       "drawer#search"
-//     ],
-//     "props": {
-//       "blockClass": "icon__mobile--search"
-//     }
-//   },
-//   // // "flex-layout.col#icon__mobile--profile": {
-//   // //   "children": [
-//   // //     "image#home__user--login"
-//   // //   ],
-//   // //   "props": {
-//   // //     "blockClass": "icon__mobile--profile"
-//   // //   }
-//   // // },
-//   "image#home__user--search": {
-//   "title" : "header user section search logo",
-//   "props" : {
-//     "src" : "assets/img/header/search.svg",
-//     "blockClass" : "home__search--logo",
-//     "maxWidth" : 20,
-//     "maxHeight": 18
-//   }
-//   },
-//   "drawer#search": {
-//     "blocks": [
-//         "drawer-trigger#mobile__icon--search"
-//     ],
-//     "props": {
-//       "slideDirection": "rightToLeft"
-//     },
-//     "children": [
-//         "search-bar"
-//     ],
-//     "title": "Drawer search"
-// },
-// "drawer-trigger#mobile__icon--search": {
-//     "children": [
-//       "icon#home__user--search"
-//     ],
-//     "title": "Icon search Drawer on mobile"
-// },
-//   "modal-trigger#example": {
-//     "title": "header mobile modal tigger",
-//     "children": [
-//       "icon#home__user--login" ,
-//       "modal-layout#example"
-//     ]
-//   },
-//   "modal-layout#example": {
-//     "title": "header mobile modal layout",
-//     "children": [
-//       "login-content#modal__login"
-//     ]
-//   },
-//   "login-content#modal__login" : {
-//     "title" : "header mobile modal login-content",
-//     "props" : {
-//       "defaultOption" : 0
-//     }
-//   },
-
-//   "flex-layout.row#header__mobile--section-one": {
-//     "title": "header mobile section one drawer and favorites",
-//     "children": [
-//       "drawer",
-//       "image#Header__user--favorites"
-//     ],
-//     "props": {
-//       "blockClass": "header__mobile--section-one"
-//     }
-//   },
-
-//   "drawer": {
-//     "title": "Mega menu mobile",
-//     "children": [
-//       "mega-menu#mobile"
-//     ],
-//     "blocks": ["drawer-header#my-drawer"]
-//   },
-//   "mega-menu#mobile": {
-//     "title": "header mobile section mega menu",
-//     "props": {
-//       "defaultDepartmentActive": "...",
-//       "orientation": "vertical",
-//       "openOnly": "vertical"
-//     }
-//   },
-//   "drawer-header#my-drawer": {
-//     "title": "header mobile section drawer header",
-//     "children": ["flex-layout.row#drawer-header"]
-//   },
-//   "flex-layout.row#drawer-header": {
-//     "title": "header mobile section drawer content",
-//     "children": [
-//       "flex-layout.col#mega-menu-go-back-btn",
-//       // "flex-layout.col#logo-desktop",
-//       "flex-layout.col#drawer-close-button"
-//     ],
-//     "props": {
-//       "blockClass": "drawer-header",
-//       "preventHorizontalStretch": true,
-//       "preventVerticalStretch": true,
-//       "preserveLayoutOnMobile": true,
-//       "fullWidth": true
-//     }
-//   },
-//   "flex-layout.col#drawer-close-button": {
-//     "title": "header mobile section mega menu colse button",
-//     "children": ["drawer-close-button"],
-//     "props": {
-//       "verticalAlign": "middle",
-//       "horizontalAlign": "right"
-//     }
-//   },
-//   "flex-layout.col#mega-menu-go-back-btn": {
-//     "title": "header mobile section mega menu back button",
-//     "children": ["mega-menu-go-back-btn"],
-//     "props": {
-//       "verticalAlign": "middle",
-//       "horizontalAlign": "left",
-//       "paddingLeft": 4
-//     }
-//   },
-
-//   //
-
-//   "modal-trigger#mobile__profile--tigger": {
-//     "title": "header mobile section modal trigger",
-//     "children": [
-//       "image#home__user--login",
-//       "modal-layout#example"
-//     ],
-//     "props": {
-//       "blockClass": "mobile__profile--tigger"
-//     }
-//   },
-//   "modal-layout#mobile__profile--modal": {
-//     "title": "header mobile section modal layout",
-//     "children": [
-//       "login-content#modal__login"
-//     ],
-//     "props": {
-//       "blockClass": "mobile__profile--modal"
-//     }
-//   },
-//   "login-content#mobile__modal--content" : {
-//     "title" : "header mobile modal login-content",
-//     "props" : {
-//       "defaultOption" : 0,
-//       "blockClass": "mobile__modal--content"
-//     }
-// }
 }
-
