--- a/store/blocks/mobile/components/header/header.jsonc
+++ b/store/blocks/mobile/components/header/header.jsonc
@@ -20,6 +20,17 @@
       "fullWidth": true
     }
   },
+
+  "logo#mobile": {
+    "props": {
+      "title": "Logo",
+      "href": "/",
+      "url": "assets/img/header/adidas_logo.png",
+      "width": "50",
+      "blockClass": "container__logo--mobile"
+    }
+  },
+
   "flex-layout.row#header___mobile--bottom--user" : {
     "title" : "header bottom row user section",
     "children" : [
@@ -76,35 +87,33 @@
       "slideDirection": "rightToLeft"
     },
     "children": [
-        "search-bar"
+        "search-bar#mobile__header--search"
     ],
     "title": "Drawer search"
 },
+
+"search-bar#mobile__header--search": {
+  "title" : "mobile header search",
+    "blocks": [
+      "autocomplete-result-list.v2"
+    ],
+    "props": {
+      "blockClass": "mobile__header--search",
+      "hasIconLeft": false,
+      "openAutocompleteOnFocus": true,
+      // "containerMode": "overlay",
+      "maxWidth": 900,
+      "height": 900
+
+    }
+},
+
 "drawer-trigger#mobile__icon--search": {
     "children": [
       "icon#home__user--search"
     ],
     "title": "Icon search Drawer on mobile"
 },
-  "modal-trigger#example": {
-    "title": "header mobile modal tigger",
-    "children": [
-      "icon#home__user--login" ,
-      "modal-layout#example"
-    ]
-  },
-  "modal-layout#example": {
-    "title": "header mobile modal layout",
-    "children": [
-      "login-content#modal__login"
-    ]
-  },
-  "login-content#modal__login" : {
-    "title" : "header mobile modal login-content",
-    "props" : {
-      "defaultOption" : 0
-    }
-  },
 
   "flex-layout.row#header__mobile--section-one": {
     "title": "header mobile section one drawer and favorites",
@@ -122,6 +131,9 @@
     "children": [
       "flex-layout.col#mobile__menu--container"
     ],
+    "props": {
+      "blockClass": "mobile__mega--menu"
+    },
     "blocks": ["drawer-header#my-drawer"]
   },
   "mega-menu#mobile": {
@@ -139,7 +151,10 @@
     "children": [
       "mega-menu#mobile",
       "flex-layout.col#mobile__menu--items"
-    ]
+    ],
+    "props": {
+      "blockClass": "mobile__menu--container"
+    }
   },
 
   "flex-layout.col#mobile__menu--items": {
@@ -213,21 +228,39 @@
     "title": "header mobile section drawer content",
     "children": [
       "flex-layout.col#mega-menu-go-back-btn",
-      // "flex-layout.col#logo-desktop",
+      "flex-layout.col#drawer__logo",
       "flex-layout.col#drawer-close-button"
     ],
     "props": {
       "blockClass": "drawer-header",
-      "preventHorizontalStretch": true,
-      "preventVerticalStretch": true,
-      "preserveLayoutOnMobile": true,
+      "horizontalAlign": "around",
       "fullWidth": true
     }
   },
+
+  "flex-layout.col#drawer__logo": {
+    "title": "header mobile section drawer logo",
+    "children": [
+      "logo#mobile__logo--drawer"
+    ]
+  },
+
+
+  "logo#mobile__logo--drawer": {
+    "props": {
+      "title": "Logo",
+      "href": "/",
+      "url": "assets/img/header/adidas_logo.png",
+      "width": "50",
+      "blockClass": "mobile__logo--drawer"
+    }
+  },
+
   "flex-layout.col#drawer-close-button": {
     "title": "header mobile section mega menu colse button",
     "children": ["drawer-close-button"],
     "props": {
+      "blockClass": "drawer-close-button",
       "verticalAlign": "middle",
       "horizontalAlign": "right"
     }
