--- a/store/blocks/desktop/components/header/header__menu--container.jsonc
+++ b/store/blocks/desktop/components/header/header__menu--container.jsonc
@@ -146,7 +146,7 @@
       }
     },
     "blocks": [
-      "vtex.menu@2.x:submenu#department__news"
+      "vtex.menu@2.x:submenu#department__gender"
     ]
   }
 }
